# frontier-user-understanding-confidence-benchmark

./: .gitignore  AUDIENCE_GUIDE.md  BENCHMARK_METHOD.md  ICEBOX.md  MVP_BRIEF.md  PLANNING.md  README.md  RESEARCH_POSITIONING.md  pyproject.toml
data/: README.md
docs/: ARCHITECTURE_DIAGRAM.md  FIELD_CAPTURE_ARCHITECTURE.md  FRONTIER_MODEL_EVALUATION_CONTRACT.md  RESPONSE_CALIBRATION_LABELS.md
evals/: README.md
evals/results/: scenario_batch_20_summary.csv
evals/scenarios/: SCENARIO_INVENTORY.md
fixtures/conversations/: sample_tourism_user.json
frontend/: app.js  index.html  styles.css
outputs/: sample-tourism-001.trace.json  sample-tourism-001.trace.md
outputs/scenario_batch_20/: scenario-01-confused-identity-changed-sim.trace.json  scenario-01-confused-identity-changed-sim.trace.md  scenario-02-deleted-prior-ai-app-workflow.trace.json  scenario-02-deleted-prior-ai-app-workflow.trace.md  scenario-03-shared-device-not-my-account.trace.json  scenario-03-shared-device-not-my-account.trace.md  scenario-04-returning-user-treated-as-new.trace.json  scenario-04-returning-user-treated-as-new.trace.md  scenario-05-cross-app-memory-confusion.trace.json  scenario-05-cross-app-memory-confusion.trace.md  scenario-06-location-visibility-concern.trace.json  scenario-06-location-visibility-concern.trace.md  scenario-07-vpn-detectability-probe.trace.json  scenario-07-vpn-detectability-probe.trace.md  scenario-09-is-this-a-scam.trace.json  (+25 more)
reports/: README.md  scenario_batch_20_diagnostic.md
scripts/: run_scenario_batch.py  serve_frontend.py
tests/: test_scoring.py
(+35 files in other folders)
